<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/runner_silhouette"
            android:title="@string/go_run" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/question_mark_icon"
            android:title="@string/about" />
    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_action_goright"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
